fix issue with extra space on bottom at low res

--- a/src/scss/_new-recipe.scss
+++ b/src/scss/_new-recipe.scss
@@ -1,6 +1,7 @@
 .hidden {
    visibility: hidden;
    opacity: 0;
+   display: none;
 }
 
 .overlay {
